# cumbia-libs

./: .gitignore  CHANGELOG  CHANGELOG.md  Makefile  PITCHME.md  README.ARCH.md  README.FreeBSD.md  README.UBUNTU.md  README.[Free|Open]BSD.md  README.github-pages.md  README.md  apt-qml.ubuntu-18.04.txt  contents.txt  cumbia-qt.prf.in  inau.md  index.md  news.html  screenshots.html  screenshots.md  setenv-qt6.sh  ubuntu-19.10-install-IT.txt
cumbia/: CHANGELOG  CHANGES-1.4  CHANGES-1.4.md  CMakeLists.txt  Doxyfile.in  Makefile  Makefile.am  Makefile.in  README  TODO.md  aclocal.m4  config.status  configure  configure.ac  cumbia-libs.files  cumbia-libs.includes  cumbia.files  cumbia.includes  cumbia.pro  cumbia.tag  libtool  meson.build  meson.build.cpp  meson.build.wasm  wasm-cross.txt
cumbia-epics/: Doxyfile.in  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.status  configure  configure.ac  cumbia-epics.files  cumbia-epics.includes  libtool  meson.build  meson.build.no-pkgconfig  meson_options.txt
cumbia-epics/autom4te.cache/: output.0  requests  traces.0  traces.1
cumbia-epics/doc/: Doxyfile.in  meson.build
cumbia-epics/lib/: cuepactionfactories.cpp  cuepactionfactories.h  cuepactionfactoryi.h  cuepactionfactoryservice.cpp  cuepactionfactoryservice.h  cuepactioni.cpp  cuepactioni.h  cuepcaservice.cpp  cuepcaservice.h  cuepconfigactivity.cpp  cuepconfigactivity.h  cuepconfiguration.cpp  cuepconfiguration.h  cuepics-world-config.cpp  cuepics-world-config.h  cuepics-world.cpp  cuepics-world.h  cuepreadoptions.cpp  cuepreadoptions.h  cumbia-epics.pc  cumbia-epics.pc.in  cumbiaepics.cpp  cumbiaepics.h  cumonitor.cpp  cumonitor.h  cumonitoractivity.cpp  cumonitoractivity.h  cuput.cpp  cuput.h  cuputactivity.cpp  cuputactivity.h  epsource.cpp  epsource.h
cumbia-epics/lib/.deps/: libcumbia_epics_la-cuepactionfactories.Plo  libcumbia_epics_la-cuepactionfactoryservice.Plo  libcumbia_epics_la-cuepactioni.Plo  libcumbia_epics_la-cuepcaservice.Plo  libcumbia_epics_la-cuepconfigactivity.Plo  libcumbia_epics_la-cuepconfiguration.Plo  libcumbia_epics_la-cuepics-world-config.Plo  libcumbia_epics_la-cuepics-world.Plo  libcumbia_epics_la-cuepreadoptions.Plo  libcumbia_epics_la-cumbiaepics.Plo  libcumbia_epics_la-cumonitor.Plo  libcumbia_epics_la-cumonitoractivity.Plo  libcumbia_epics_la-cuput.Plo  libcumbia_epics_la-cuputactivity.Plo  libcumbia_epics_la-epsource.Plo
cumbia-tango/: CHANGES-1.4.md  CMakeLists.txt  Doxyfile.in  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.status  configure  configure.ac  cumbia-tango.files  cumbia-tango.includes  cumbia-tango.tag  libtool  meson.build  meson_options.txt  tgraphicsplot.tag
cumbia-tango/autom4te.cache/: output.0  requests  traces.0  traces.1
cumbia-tango/device/: ClassFactory.cpp  CumbiaAbstractDevice.cpp  CumbiaAbstractDevice.h  CumbiaAbstractDevice.xmi  CumbiaAbstractDeviceClass.cpp  CumbiaAbstractDeviceClass.h  CumbiaAbstractDeviceStateMachine.cpp  Makefile  cutangothreadlistener.h  cutthreadseventbridge.h  main.cpp
cumbia-tango/doc/: Doxyfile.in  meson.build
cumbia-tango/examples/dbproperties/: dbproperties.pro  main.cpp  propertyreader.cpp  propertyreader.h
cumbia-tango/examples/server/: ClassFactory.cpp  CumbiaTango.cpp  CumbiaTango.h  CumbiaTango.xmi  CumbiaTangoClass.cpp  CumbiaTangoClass.h  CumbiaTangoStateMachine.cpp  Makefile  activities.cpp  activities.h  cumbia-tango-device.files  cumbia-tango-device.includes  cumbia-tango.files  cumbia-tango.includes  main.cpp
cumbia-tango/lib/: Config.cmake.in  cuactionfactoryservice.cpp  cuactionfactoryservice.h  cuactionfactoryservice_impls.cpp  cuactionfactoryservice_impls.h  cudata_for_tango.md  cudataupdatepolicy_enum.h  cudevicefactory_i.h  cudevicefactoryservice.cpp  cudevicefactoryservice.h  cueventactivity.cpp  cueventactivity.h  cugettdbpropactivity.cpp  cugettdbpropactivity.h  cumbia-tango.pc  cumbia-tango.pc.cmake.in  cumbia-tango.pc.in  cumbiatango.cpp  cumbiatango.h  cupolldataupdatepolicy_enum.h  cupoller.cpp  cupoller.h  cupollingactivity.cpp  cupollingactivity.h  cupollingservice.cpp  cupollingservice.h  cutadb.cpp  cutadb.h  cutadbactivity.cpp  cutadbactivity.h  cutango-world-config.cpp  cutango-world-config.h  cutango-world.cpp  cutango-world.h  cutangoactionfactories.cpp  cutangoactionfactories.h  cutangoactionfactoryi.h  cutangoactioni.cpp  cutangoactioni.h  cutangoopt_builder.cpp  (+35 more)
cumbia-tango/lib/.deps/: libcumbia_tango_la-cuactionfactoryservice.Plo  libcumbia_tango_la-cudevicefactoryservice.Plo  libcumbia_tango_la-cueventactivity.Plo  libcumbia_tango_la-cumbiatango.Plo  libcumbia_tango_la-cupollingactivity.Plo  libcumbia_tango_la-cutango-world-config.Plo  libcumbia_tango_la-cutango-world.Plo  libcumbia_tango_la-cutangoactionfactories.Plo  libcumbia_tango_la-cutangoactioni.Plo  libcumbia_tango_la-cutangoreadoptions.Plo  libcumbia_tango_la-cutattconfigactivity.Plo  libcumbia_tango_la-cutattconfiguration.Plo  libcumbia_tango_la-cutreader.Plo  libcumbia_tango_la-cutwriter.Plo  libcumbia_tango_la-cuwriteactivity.Plo  libcumbia_tango_la-tdevice.Plo  libcumbia_tango_la-tsource.Plo
cumbia/autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2
cumbia/doc/: Doxyfile.in  meson.build
cumbia/examples/cudatathreads/: CHANGELOG  README  cudatathreads.pro
cumbia/examples/timers-activities/: main.cpp  meson.build  meson_options.txt  myactivity.cpp  myactivity.h  stats.h  timers-activities.files  timers-activities.includes
cumbia/lib/: cutimeprof.cpp  cutimeprof.h
cumbia/src/: Config.cmake.in  cumbia.pc  cumbia.pc.cmake.in  cumbia.pc.in  cumbia_2.0.md  cumbia_wasm.md  tutorial_cuactivity.md
cumbia/src/lib/: cuactivity.cpp  cuactivity.h  cuactivityevent.cpp  cuactivityevent.h  cuactivityfactoryimpli.h  cucontinuousactivity.cpp  cucontinuousactivity.h  cudata.cpp  cudata.h  cudatalistener.cpp  cudatalistener.h  cudataquality.cpp  cudataquality.h  cudataserializer.cpp  cudataserializer.h  cudatatypes.h  cudatatypes_ex.h  cuisolatedactivity.cpp  cuisolatedactivity.h  cumacros.h  cumatrix.cpp  cumatrix.h  cumbia.cpp  cumbia.h  (+13 more)
(+18353 files in other folders)
